2.11.1: fix: remove weird horizon scrollbar which still exists; fix: remove weird trafficlight button outline;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -395,10 +395,10 @@ html {
 		/**
 		 * 鬼了,升級到electron22-beta5之後就出現了橫向scrollbar
 		 */
-		overflow-x: hidden;
-
+		
 		.display-area {
 			flex-grow: 1;
+			overflow-x: hidden;
 			// overflow-y: scroll;
 			// width: 100%;
 			// margin-bottom: 15px;
@@ -630,6 +630,10 @@ html {
 		// border-radius: 0 !important;
 		background: transparent;
 		line-height: 0;
+
+		&:focus {
+			outline: none;
+		}
 	}
 }
 
